      gradient, and topleft=...:topright=...:bottomleft=...:bottomright=...
      to make a 4-corner gradient. (1.6.0)
    * --noise adds noise to the current image: additive uniform or gaussian
      noise, or making "salt & pepper" noise. (1.6.2)
    * --trim crops the image to the minimal rectangle containing all
      the non-0 pixels. (1.6.3)
 * New ImageBufAlgo functions:
    * absdiff() computes the absolute difference (abs(A-B)) of two images,
      or between an image and a constant color. #1029 (1.6.0)
    * abs() computes the absolute value of an image. #1029 (1.6.0)
    * div() divides one image by another (pixel by pixel), or divides all
      the pixels of an image by a constant color. #1029 (1.6.0)
    * fill() has been extended with new varieties that take 2 colors (making
      a vertical gradient) and 4 colors (one for each ROI corner, for a
      bilinearly interpolated gradient). (1.6.0)
    * noise() injects noise into an image -- uniform, gaussian/normal,
      or salt & pepper noise. (1.6.2)

Public API changes:
 * Clarified in the docs that TextureSystem::get_texture_info and
   ImageCache::get_image_info "exists" queries should return true, and
   place in *data the value 1 or 0 depending on whether the image exists
   and can be read. (1.6.0/1.5.10)
 * Removed deprecated header "string_ref.h" (use string_view.h). (1.6.1)
 * ImageCache: Added get_perthread_info() and get_image_handle() to return
   opaque perthread and file handle pointers, much like TextureSystem
   already had, and added handle-based versions of get_image_info(),
   get_imagespec(), imagespec(), get_pixels(), and get_tile(), in addition
   to the existing name-based versions of those methods. #1057 (1.6.1)
 * TextureSystem: added handle-based versions of get_texture_info(),
   get_imagespec(), imagespec(), and get_texels(), in addition to the
   existing name-based versions of those methods. Note that texture(),